Refactoring OrderService: semplificata la struttura e aggiunte due rotte per l'inserimento e la cancellazione dei prodotti legati all'ordine

--- a/OrderManagerApi.csproj
+++ b/OrderManagerApi.csproj
@@ -20,8 +20,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AddressService\AddressService.csproj" />
     <ProjectReference Include="..\GenericService\GenericService.csproj" />
     <ProjectReference Include="..\OrderService\OrderService.csproj" />
+    <ProjectReference Include="..\ProductService\ProductService.csproj" />
+    <ProjectReference Include="..\UserService\UserService.csproj" />
   </ItemGroup>
 
 </Project>
