--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrderConnectionString": "Server=(localdb)\\mssqllocaldb;Database=PhotoSi;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "OrderManagerConnectionString": "Server=(localdb)\\mssqllocaldb;Database=PhotoSi;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
